# tracyPy

./: .gitignore  Digraph.gv  README.md  pyproject.toml  test.py  tree
.github/: tracyPypypi.yml
tests/: test.py
tracyPy/: Var.py  __init__.py  trace.py  utils.py
tracyPy.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
