[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"


[project]
name = "tracyPy"
version = "0.0.1"
authors = [
  { name="Balamurugan S", email="balamurugan.sekar@icloud.com" },
]
description = "A lightweight Python library that wraps NumPy-style array operations but also retains an expression history"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/balamurugan1962/tracyPy"
Issues = "https://github.com/balamurugan1962/tracyPy/issues"
